Sincronizando conteúdo da v2 na main

--- a/src/pages/catalogo.astro
+++ b/src/pages/catalogo.astro
@@ -1,5 +1,5 @@
 ---
-// src/pages/catalogo.astro - ATUALIZAR
+// FILE: src/pages/catalogo.astro
 import Layout from '../layouts/Layout.astro'
 import Catalog from '../components/Catalog'
 ---
